.antlr/AbstractMachineParser.py
# Generated from /Users/gcoe/Documents/GitHub/615M-Abstract-Machine-Interpreter/AbstractMachineParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AbstractMachineParser ( Parser ):

    grammarFileName = "AbstractMachineParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.DATA'", "'STACK'", "'QUEUE'", "'TAPE'", 
                     "'.LOGIC'", "'SCAN'", "'PRINT'", "'SCAN RIGHT'", "'SCAN LEFT'", 
                     "'READ'", "'WRITE'", "'RIGHT'", "'LEFT'", "'UP'", "'DOWN'", 
                     "','", "']'", "'('", "')'", "'/'" ]

    symbolicNames = [ "<INVALID>", "DATA", "STACK", "QUEUE", "TAPE", "LOGIC", 
                      "SCAN", "PRINT", "SCAN_RIGHT", "SCAN_LEFT", "READ", 
                      "WRITE", "RIGHT", "LEFT", "UP", "DOWN", "COMMA", "CLOSE_BRACKET", 
                      "OPEN_PAR", "CLOSE_PAR", "SLASH", "SYMBOL", "IDENTIFIER", 
                      "WS" ]

    RULE_program = 0
    RULE_identifer = 1
    RULE_memory_declaration = 2
    RULE_logic_declaration = 3
    RULE_commmand = 4
    RULE_memory_operation = 5
    RULE_direction = 6
    RULE_move_over_tape = 7
    RULE_replacement = 8
    RULE_param_list = 9

    ruleNames =  [ "program", "identifer", "memory_declaration", "logic_declaration", 
                   "commmand", "memory_operation", "direction", "move_over_tape", 
                   "replacement", "param_list" ]

    EOF = Token.EOF
    DATA=1
    STACK=2
    QUEUE=3
    TAPE=4
    LOGIC=5
    SCAN=6
    PRINT=7
    SCAN_RIGHT=8
    SCAN_LEFT=9
    READ=10
    WRITE=11
    RIGHT=12
    LEFT=13
    UP=14
    DOWN=15
    COMMA=16
    CLOSE_BRACKET=17
    OPEN_PAR=18
    CLOSE_PAR=19
    SLASH=20
    SYMBOL=21
    IDENTIFIER=22
    WS=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATA(self):
            return self.getToken(AbstractMachineParser.DATA, 0)

        def LOGIC(self):
            return self.getToken(AbstractMachineParser.LOGIC, 0)

        def memory_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AbstractMachineParser.Memory_declarationContext)
            else:
                return self.getTypedRuleContext(AbstractMachineParser.Memory_declarationContext,i)


        def logic_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AbstractMachineParser.Logic_declarationContext)
            else:
                return self.getTypedRuleContext(AbstractMachineParser.Logic_declarationContext,i)


        def getRuleIndex(self):
            return AbstractMachineParser.RULE_program




    def program(self):

        localctx = AbstractMachineParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.state = 38
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 20
                self.match(AbstractMachineParser.DATA)
                self.state = 22 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 21
                    self.memory_declaration()
                    self.state = 24 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 28) != 0)):
                        break

                self.state = 26
                self.match(AbstractMachineParser.LOGIC)
                self.state = 28 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 27
                    self.logic_declaration()
                    self.state = 30 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==21 or _la==22):
                        break

                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 32
                self.match(AbstractMachineParser.LOGIC)
                self.state = 34 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 33
                    self.logic_declaration()
                    self.state = 36 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==21 or _la==22):
                        break

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentiferContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AbstractMachineParser.RULE_identifer

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SymbolAsIdentifierContext(IdentiferContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbstractMachineParser.IdentiferContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SYMBOL(self):
            return self.getToken(AbstractMachineParser.SYMBOL, 0)


    class IdentifierContext(IdentiferContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbstractMachineParser.IdentiferContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(AbstractMachineParser.IDENTIFIER, 0)



    def identifer(self):

        localctx = AbstractMachineParser.IdentiferContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_identifer)
        try:
            self.state = 42
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22]:
                localctx = AbstractMachineParser.IdentifierContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 40
                self.match(AbstractMachineParser.IDENTIFIER)
                pass
            elif token in [21]:
                localctx = AbstractMachineParser.SymbolAsIdentifierContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 41
                self.match(AbstractMachineParser.SYMBOL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Memory_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AbstractMachineParser.RULE_memory_declaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class QueueDeclarationContext(Memory_declarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbstractMachineParser.Memory_declarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def QUEUE(self):
            return self.getToken(AbstractMachineParser.QUEUE, 0)
        def IDENTIFIER(self):
            return self.getToken(AbstractMachineParser.IDENTIFIER, 0)


    class TapeDeclarationContext(Memory_declarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbstractMachineParser.Memory_declarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TAPE(self):
            return self.getToken(AbstractMachineParser.TAPE, 0)
        def IDENTIFIER(self):
            return self.getToken(AbstractMachineParser.IDENTIFIER, 0)


    class StackDeclarationContext(Memory_declarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbstractMachineParser.Memory_declarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STACK(self):
            return self.getToken(AbstractMachineParser.STACK, 0)
        def IDENTIFIER(self):
            return self.getToken(AbstractMachineParser.IDENTIFIER, 0)



    def memory_declaration(self):

        localctx = AbstractMachineParser.Memory_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_memory_declaration)
        try:
            self.state = 50
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                localctx = AbstractMachineParser.StackDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.match(AbstractMachineParser.STACK)
                self.state = 45
                self.match(AbstractMachineParser.IDENTIFIER)
                pass
            elif token in [3]:
                localctx = AbstractMachineParser.QueueDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.match(AbstractMachineParser.QUEUE)
                self.state = 47
                self.match(AbstractMachineParser.IDENTIFIER)
                pass
            elif token in [4]:
                localctx = AbstractMachineParser.TapeDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.match(AbstractMachineParser.TAPE)
                self.state = 49
                self.match(AbstractMachineParser.IDENTIFIER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logic_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifer(self):
            return self.getTypedRuleContext(AbstractMachineParser.IdentiferContext,0)


        def CLOSE_BRACKET(self):
            return self.getToken(AbstractMachineParser.CLOSE_BRACKET, 0)

        def commmand(self):
            return self.getTypedRuleContext(AbstractMachineParser.CommmandContext,0)


        def param_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AbstractMachineParser.Param_listContext)
            else:
                return self.getTypedRuleContext(AbstractMachineParser.Param_listContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(AbstractMachineParser.COMMA)
            else:
                return self.getToken(AbstractMachineParser.COMMA, i)

        def memory_operation(self):
            return self.getTypedRuleContext(AbstractMachineParser.Memory_operationContext,0)


        def direction(self):
            return self.getTypedRuleContext(AbstractMachineParser.DirectionContext,0)


        def getRuleIndex(self):
            return AbstractMachineParser.RULE_logic_declaration




    def logic_declaration(self):

        localctx = AbstractMachineParser.Logic_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_logic_declaration)
        self._la = 0 # Token type
        try:
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.identifer()
                self.state = 53
                self.match(AbstractMachineParser.CLOSE_BRACKET)
                self.state = 54
                self.commmand()
                self.state = 55
                self.param_list()
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==16:
                    self.state = 56
                    self.match(AbstractMachineParser.COMMA)
                    self.state = 57
                    self.param_list()
                    self.state = 62
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.identifer()
                self.state = 64
                self.match(AbstractMachineParser.CLOSE_BRACKET)
                self.state = 65
                self.memory_operation()
                self.state = 66
                self.param_list()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==16:
                    self.state = 67
                    self.match(AbstractMachineParser.COMMA)
                    self.state = 68
                    self.param_list()
                    self.state = 73
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                self.identifer()
                self.state = 75
                self.match(AbstractMachineParser.CLOSE_BRACKET)
                self.state = 76
                self.direction()
                self.state = 77
                self.param_list()
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==16:
                    self.state = 78
                    self.match(AbstractMachineParser.COMMA)
                    self.state = 79
                    self.param_list()
                    self.state = 84
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommmandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SCAN(self):
            return self.getToken(AbstractMachineParser.SCAN, 0)

        def PRINT(self):
            return self.getToken(AbstractMachineParser.PRINT, 0)

        def SCAN_RIGHT(self):
            return self.getToken(AbstractMachineParser.SCAN_RIGHT, 0)

        def SCAN_LEFT(self):
            return self.getToken(AbstractMachineParser.SCAN_LEFT, 0)

        def getRuleIndex(self):
            return AbstractMachineParser.RULE_commmand




    def commmand(self):

        localctx = AbstractMachineParser.CommmandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_commmand)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 960) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Memory_operationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(AbstractMachineParser.READ, 0)

        def OPEN_PAR(self):
            return self.getToken(AbstractMachineParser.OPEN_PAR, 0)

        def IDENTIFIER(self):
            return self.getToken(AbstractMachineParser.IDENTIFIER, 0)

        def CLOSE_PAR(self):
            return self.getToken(AbstractMachineParser.CLOSE_PAR, 0)

        def WRITE(self):
            return self.getToken(AbstractMachineParser.WRITE, 0)

        def getRuleIndex(self):
            return AbstractMachineParser.RULE_memory_operation




    def memory_operation(self):

        localctx = AbstractMachineParser.Memory_operationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_memory_operation)
        try:
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.match(AbstractMachineParser.READ)
                self.state = 90
                self.match(AbstractMachineParser.OPEN_PAR)
                self.state = 91
                self.match(AbstractMachineParser.IDENTIFIER)
                self.state = 92
                self.match(AbstractMachineParser.CLOSE_PAR)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.match(AbstractMachineParser.WRITE)
                self.state = 94
                self.match(AbstractMachineParser.OPEN_PAR)
                self.state = 95
                self.match(AbstractMachineParser.IDENTIFIER)
                self.state = 96
                self.match(AbstractMachineParser.CLOSE_PAR)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DirectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RIGHT(self):
            return self.getToken(AbstractMachineParser.RIGHT, 0)

        def LEFT(self):
            return self.getToken(AbstractMachineParser.LEFT, 0)

        def UP(self):
            return self.getToken(AbstractMachineParser.UP, 0)

        def DOWN(self):
            return self.getToken(AbstractMachineParser.DOWN, 0)

        def getRuleIndex(self):
            return AbstractMachineParser.RULE_direction




    def direction(self):

        localctx = AbstractMachineParser.DirectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_direction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 61440) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Move_over_tapeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def direction(self):
            return self.getTypedRuleContext(AbstractMachineParser.DirectionContext,0)


        def OPEN_PAR(self):
            return self.getToken(AbstractMachineParser.OPEN_PAR, 0)

        def IDENTIFIER(self):
            return self.getToken(AbstractMachineParser.IDENTIFIER, 0)

        def CLOSE_PAR(self):
            return self.getToken(AbstractMachineParser.CLOSE_PAR, 0)

        def getRuleIndex(self):
            return AbstractMachineParser.RULE_move_over_tape




    def move_over_tape(self):

        localctx = AbstractMachineParser.Move_over_tapeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_move_over_tape)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.direction()
            self.state = 102
            self.match(AbstractMachineParser.OPEN_PAR)
            self.state = 103
            self.match(AbstractMachineParser.IDENTIFIER)
            self.state = 104
            self.match(AbstractMachineParser.CLOSE_PAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReplacementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SYMBOL(self, i:int=None):
            if i is None:
                return self.getTokens(AbstractMachineParser.SYMBOL)
            else:
                return self.getToken(AbstractMachineParser.SYMBOL, i)

        def SLASH(self):
            return self.getToken(AbstractMachineParser.SLASH, 0)

        def getRuleIndex(self):
            return AbstractMachineParser.RULE_replacement




    def replacement(self):

        localctx = AbstractMachineParser.ReplacementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_replacement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(AbstractMachineParser.SYMBOL)
            self.state = 107
            self.match(AbstractMachineParser.SLASH)
            self.state = 108
            self.match(AbstractMachineParser.SYMBOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_PAR(self):
            return self.getToken(AbstractMachineParser.OPEN_PAR, 0)

        def SYMBOL(self):
            return self.getToken(AbstractMachineParser.SYMBOL, 0)

        def COMMA(self):
            return self.getToken(AbstractMachineParser.COMMA, 0)

        def identifer(self):
            return self.getTypedRuleContext(AbstractMachineParser.IdentiferContext,0)


        def CLOSE_PAR(self):
            return self.getToken(AbstractMachineParser.CLOSE_PAR, 0)

        def replacement(self):
            return self.getTypedRuleContext(AbstractMachineParser.ReplacementContext,0)


        def getRuleIndex(self):
            return AbstractMachineParser.RULE_param_list




    def param_list(self):

        localctx = AbstractMachineParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param_list)
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.match(AbstractMachineParser.OPEN_PAR)
                self.state = 111
                self.match(AbstractMachineParser.SYMBOL)
                self.state = 112
                self.match(AbstractMachineParser.COMMA)
                self.state = 113
                self.identifer()
                self.state = 114
                self.match(AbstractMachineParser.CLOSE_PAR)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.match(AbstractMachineParser.OPEN_PAR)
                self.state = 117
                self.replacement()
                self.state = 118
                self.match(AbstractMachineParser.COMMA)
                self.state = 119
                self.identifer()
                self.state = 120
                self.match(AbstractMachineParser.CLOSE_PAR)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





